# youtube_searcher

./: .gitignore  AUTHORS.rst  README.md  a  constants.py  pyproject.toml  search.py
tests/: __init__.py  test_base_search.py  test_models.py  test_query.py  test_query_dict.py
tests/data/: channel_search.json  video_search.json
youtube_searcher/: base.py  constants.py  query.py  search.py  typings.py  utils.py
youtube_searcher/models/: channels.py  videos.py
